<resources>
    <string name="app_name">Wish</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="user_name">Enter Your Name</string>
    <string name="next">Next</string>
    <string name="wish_quotes">Wish a Happy Birthday \n\u00A0\u00A0\u00A0\u00A0\u00A0the right way</string>
    <string name="banner">banner</string>
    <string name="theme">Theme</string>
    <string name="version">Version</string>
    <string name="private_policy">Private Policy</string>
    <string name="about">About</string>

</resources>