<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_item"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.wish.view.HomeScreen"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_screen" />
    <fragment
        android:id="@+id/calendar"
        android:name="com.example.wish.view.CalendarScreen"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar_screen" />
    <fragment
        android:id="@+id/profile"
        android:name="com.example.wish.view.ProfileScreen"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile_screen" />
</navigation>