<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0C4DE"
    tools:context=".view.OnboardingScreen">

    <ImageView
        android:id="@+id/imageview_one"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="TODO"
        android:scaleType="fitCenter"
        android:layout_marginTop="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/wishtwo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wish_quotes"
        android:maxLines="2"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_one"
        android:layout_marginTop="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/username_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_edittext_background"
        android:drawableStart="@drawable/person"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#000000"
        android:textColorHint="#8A8A8A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_goto_main" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_goto_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="bold"
        android:background="@drawable/custom_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>